# PodcastManager

./: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: tauri-windows.yml
docs/: schema-proposal.md
public/: manifest.webmanifest  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/auth/: AuthProvider.tsx  LoginPage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
src/data/: database.types.ts  importTargets.ts  types.ts
src/data/repositories/: checklists.ts  citacoes.ts  communicationLog.ts  eixos.ts  episodePromo.ts  episodeScripts.ts  episodioPessoas.ts  episodios.ts  importControle.ts  importPresets.ts  importSpotify.ts  messageTemplates.ts  metricsRepo.ts  pessoas.ts  scriptTemplates.ts  search.ts  settings.ts  stages.ts  tasks.ts  (+1 more)
src/lib/: parseFile.ts  supabase.ts  utils.ts
src/pages/: AcervoPage.tsx  ComunicacaoPage.tsx  ConfigPage.tsx  EpisodioRoteiroPage.tsx  EpisodiosPage.tsx  HojePage.tsx  ImportarPage.tsx  KanbanPage.tsx  MetricasPage.tsx  PessoasPage.tsx
supabase/migrations/: 0001_phase1_core.sql  0002_phase1_seed.sql  0003_harden_function_search_path.sql  0004_move_episode_stage.sql  0005_phase2_roteiro.sql  0006_phase3_comunicacao.sql  0007_phase4_metricas.sql  0008_phase5_divulgacao.sql  0009_phase5_transcricao.sql
(+32 files in other folders)
