[package]
name = "julgados-e-comentados"
version = "0.1.0"
description = "Gestão de produção do podcast Julgados e Comentados (ESMP-PR/MPPR)"
authors = ["MPPR"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "julgados_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
